# avant61850

./: .gitignore  README.md  make.sh
xr7-drivers/: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  descript.ion  make_simple.sh
xr7-drivers/8250/: 8250.h  8250_bcm2835aux.c  8250_core.c  Makefile
xr7-drivers/dp83848/: Makefile  dp83848.c
xr7-drivers/flx_bus/: Makefile  flx_bus.c  flx_bus.h
xr7-drivers/flx_bus_i2c/: Makefile  flx_bus_i2c.c
xr7-drivers/flx_bus_mdio/: Makefile  device-tree-bindings.txt  flx_bus_mdio.h  flx_bus_mdio_main.c  flx_bus_mdio_phy.c  flx_bus_mdio_phy.h  flx_bus_mdio_types.h
xr7-drivers/flx_fpts/: Makefile  flx_fpts_api.h  flx_fpts_char.c  flx_fpts_char.h  flx_fpts_hw_type.h  flx_fpts_if.h  flx_fpts_interrupt.c  flx_fpts_interrupt.h  flx_fpts_main.c  flx_fpts_proc.c  flx_fpts_proc.h  flx_fpts_types.h
xr7-drivers/flx_frs/: Makefile  flx_frs_adapter.c  flx_frs_adapter.h  flx_frs_aux_netdev.c  flx_frs_ethtool.c  flx_frs_ethtool.h  flx_frs_hw_type.h  flx_frs_if.h  flx_frs_iflib.h  flx_frs_indirect.c  flx_frs_main.c  flx_frs_main.h  flx_frs_mmio.c  flx_frs_netdev.c  flx_frs_netdev.h  flx_frs_netdevif.c  flx_frs_netdevif.h  flx_frs_proc.c  flx_frs_sfp.c  flx_frs_types.h
xr7-drivers/flx_frtc/: Makefile  flx_time_nco.c  flx_time_nco.h  flx_time_nco_main.c  flx_time_nco_proc.c  flx_time_nco_proc.h  flx_time_nco_types.h
xr7-drivers/flx_gpio/: Makefile  flx_gpio_if.h  flx_gpio_main.c
xr7-drivers/flx_i2c_gpio/: Makefile  flx_i2c_gpio.c
xr7-drivers/flx_i2c_mdio/: Makefile  flx_i2c_mdio_main.c
xr7-drivers/flx_pci/: flx_pci.h
(+572 files in other folders)
